--- a/example.html
+++ b/example.html
@@ -1,5 +1,5 @@
-<!-- <script src="./ripple.js"></script> -->
-<script src="./dist/ripple.min.js"></script>
+<script src="./ripple.js"></script>
+<!-- <script src="./dist/ripple.min.js"></script> -->
 <style>
   body {
     text-align: center;
@@ -22,11 +22,67 @@
     margin:0;
     padding: 20px;
   }
+
+  .test {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-clip: padding-box;
+    pointer-events: none;
+    overflow: hidden;
+  }
+
+  .ripple {
+    -webkit-mask-image: -webkit-radial-gradient(circle, white, black);
+  }
+
+  .ripple-mask {
+    -webkit-animation: ripple-animation 2s forwards;
+    -moz-animation: ripple-animation 2s forwards;
+    -o-animation: ripple-animation 2s forwards;
+  }
+
+  @-webkit-keyframes ripple-animation {
+    from {
+      transform: translate(-50%, -50%) scale(1);
+      opacity: .4;
+    }
+    to {
+      transform: scale(100);
+      opacity: 0;
+    }
+  }
+
+  @-moz-keyframes ripple-animation {
+    from {
+      transform: translate(-50%, -50%) scale(1);
+      opacity: .4;
+    }
+    to {
+      transform: scale(100);
+      opacity: 0;
+    }
+  }
+
+  @-o-keyframes ripple-animation {
+    from {
+      transform: translate(-50%, -50%) scale(1);
+      opacity: .4;
+    }
+    to {
+      transform: scale(100);
+      opacity: 0;
+    }
+  }
 </style>
 
 <button class="ripple">Button</button>
 <button class="ripple" data-ripple-color="#89669b" style="background:white; color:black;">Button</button>
 <button class="ripple" ripple-color="#f45673" style="background:white; color:black;">Button</button>
+<button class="ripple fab" data-ripple-color="#89669b" style="background:#310149;"></button>
 
 <script>
   $.ripple.init();
